examples/type_system/failing/152_array_literal_callarg_conflict_prefers_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn takes_ints(xs: Array<Int>) -> Int { 0 }

fn main() -> Unit {
    let _x = takes_ints([|1, "two"|])
}
